clock style finished

--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #000;
+  background: mediumorchid;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -17,12 +17,12 @@ body {
 }
 
 h1 {
-  color: white;
+  color: midnightblue;
   font-size: 43px;
   margin-bottom: 30px;
 }
 .glow {
   font-size: 60px;
-  color: #fff;
+  color: black;
   font-weight: bold;
 }
