--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #000;
+  background: mediumorchid;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -18,14 +18,14 @@ body {
 }
 
 h1 {
-  color: white;
+  color: midnightblue;
   font-size: 43px;
   margin-bottom: 30px;
 }
 
 .glow {
   font-size: 60px;
-  color: #fff;
+  color: black;
   font-weight: bold;
 }
 
